fix nav on mobile and welcome h1

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,238 +1,254 @@
 .home-bg {
-    background-image: url("/images/home-bg2.jpg");
-    background-position: center bottom;
-    background-attachment: fixed;
-    background-size: cover;
+  background-image: url('/images/home-bg2.jpg');
+  background-position: center bottom;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .home-banner {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-banner > h1 {
-    color: white;
-    font-weight: bold;
-    font-size: 50px;
-    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
 }
 
 .home-page-bg {
-    width: 100%;
-    background-color: var(--bg1);
+  width: 100%;
+  background-color: var(--bg1);
 }
 
 .home-page {
-    margin: 0 auto;
-    max-width: 1000px;
-    height: 100%;
+  margin: 0 auto;
+  max-width: 1000px;
+  height: 100%;
 }
 
 .home-page > h2 {
-    padding: 20px;
-    font-size: 30px;
-    font-weight: bold;
-    color: var(--dark1);
+  padding: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--dark1);
 }
 
 .top-rated-wrap {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-    padding-top: 20px;
-    padding-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 .top-rated-card {
-    width: 300px;
-    height: 250px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    transition: all 0.5s;
-    cursor: pointer;
+  width: 300px;
+  height: 250px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
 .top-rated-card:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .top-rated-card-img {
-    background-size: cover;
-    background-position: center;
-    height: 150px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  background-size: cover;
+  background-position: center;
+  height: 150px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .top-rating {
-    padding: 5px 10px;
-    color: white;
-    font-size: 12px;
-    font-weight: bold;
-    width: fit-content;
-    border-radius: 10px;
-    background-color: var(--mid2);
+  padding: 5px 10px;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  width: fit-content;
+  border-radius: 10px;
+  background-color: var(--mid2);
 }
 
 .top-rated-card-title {
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
 }
 
 .top-rated-description {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
 .top-rated-location {
-    font-size: 12px;
-    color: var(--dark1);
+  font-size: 12px;
+  color: var(--dark1);
 }
 
 .top-rated-description-wrap {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
 }
 
 .top-rated-level-length {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 5px;
 }
 
 .top-rated-length {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .hike-level {
-    padding: 5px 10px;
-    border-radius: 10px;
-    background-color: var(--mid1);
-    font-size: 10px;
-    color: white;
-    width: fit-content;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: var(--mid1);
+  font-size: 10px;
+  color: white;
+  width: fit-content;
 }
 
 .top-rated-stars {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .rating {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .stars {
-    background: url("/images/star-rating-sprite-sm.png") repeat-x;
-    font-size: 0;
-    height: 15px;
-    line-height: 0;
-    overflow: hidden;
-    text-indent: -999em;
-    width: 75px;
+  background: url('/images/star-rating-sprite-sm.png') repeat-x;
+  font-size: 0;
+  height: 15px;
+  line-height: 0;
+  overflow: hidden;
+  text-indent: -999em;
+  width: 75px;
 }
 
 .star-sprite {
-    background: url("/images/star-rating-sprite-sm.png") repeat-x;
-    background-position: 0 100%;
-    float: left;
-    height: 15px;
-    display: block;
+  background: url('/images/star-rating-sprite-sm.png') repeat-x;
+  background-position: 0 100%;
+  float: left;
+  height: 15px;
+  display: block;
 }
 
 .directories {
-    width: 100%;
-    background-color: white;
-    padding: 20px;
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0 auto;
-    color: var(--mid1);
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0 auto;
+  color: var(--mid1);
 }
 .directory-list {
-    max-height: 400px;
-    padding: 30px;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    gap: 5px;
+  max-height: 400px;
+  padding: 30px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  gap: 5px;
 }
 .directory-trails {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .directory-trail {
-    font-size: 10px;
-    color: var(--mid2);
+  font-size: 10px;
+  color: var(--mid2);
 }
 
 .directory-trails a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .directory-trails a:hover {
-    color: var(--mid3);
+  color: var(--mid3);
 }
 
 @media screen and (min-width: 2000px) {
-    .home-banner {
-        height: 350px;
-    }
+  .home-banner {
+    height: 350px;
+  }
 }
 
 @media screen and (max-width: 1400px) {
-    .home-banner {
-        height: 250px;
-    }
-    .home-bg {
-        background-image: url("/images/home-bg.jpg");
-    }
+  .home-banner {
+    height: 250px;
+  }
+  .home-bg {
+    background-image: url('/images/home-bg.jpg');
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .directory-list {
-        max-height: 500px;
-    }
+  .directory-list {
+    max-height: 500px;
+  }
+
+  .home-banner > h1 {
+    font-size: 40px;
+  }
 }
 
 @media screen and (max-width: 540px) {
-    .directory-list {
-        max-height: 700px;
-    }
+  .directory-list {
+    max-height: 700px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .home-banner > h1 {
+    font-size: 35px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .home-banner {
-        background-image: url("/images/home-bg2.jpg");
-        background-position: center bottom;
-        background-size: cover;
-        height: 125px;
-    }
-    .home-banner > h1 {
-        font-size: 30px;
-    }
-    .home-page > h2 {
-        padding: 20px;
-        font-size: 24px;
-    }
-    .directory-list {
-        max-height: none;
-    }
+  .home-banner {
+    background-image: url('/images/home-bg2.jpg');
+    background-position: center bottom;
+    background-size: cover;
+    height: 125px;
+  }
+  .home-banner > h1 {
+    font-size: 30px;
+  }
+  .home-page > h2 {
+    padding: 20px;
+    font-size: 24px;
+  }
+  .directory-list {
+    max-height: none;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .home-banner > h1 {
+    font-size: 25px;
+  }
 }
